tests/ui/traits/const-traits/const-check-fns-in-const-impl.stderr
error[E0015]: cannot call non-const function `non_const` in constant functions
  --> $DIR/const-check-fns-in-const-impl.rs:14:16
   |
LL |     fn foo() { non_const() }
   |                ^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0015`.
